--- a/templates/config.json.j2
+++ b/templates/config.json.j2
@@ -14,7 +14,6 @@
         "dns": "{{ consul_dns_bind_address }}",
         "http": "{{ consul_http_bind_address }}",
         "https": "{{ consul_https_bind_address }}",
-        "rpc": "{{ consul_rpc_bind_address }}",
     },
     {% if consul_ports %}
         "ports": {{ consul_ports | to_json }},
@@ -46,7 +45,7 @@
     {## LAN Join ##}
     "start_join": [
         {% for server in _consul_lan_servers %}
-            "{{ hostvars[server]['consul_bind_address'] | ipwrap }}",
+            "{{ server | ipwrap }}",
         {% endfor %} ],
 
     {## Server/Client ##}
@@ -62,14 +61,14 @@
         {## Bootstrap settings ##}
         "bootstrap": {{ (item.config_version == 'bootstrap') | bool | to_json }},
         {% if consul_bootstrap_expect and not (item.config_version == 'bootstrap') %}
-            "bootstrap_expect": {{ _consul_lan_servers | length }},
+            "bootstrap_expect": {{ consul_bootstrap_servers | length }},
         {% endif %}
 
         {## WAN Join ##}
         {% if _consul_wan_servers | length > 0 %}
             "start_join_wan": [
                 {% for server in _consul_wan_servers %}
-                    "{{ hostvars[server]['consul_bind_address'] | ipwrap }}",
+                    "{{ server | ipwrap }}",
                 {% endfor %} ],
         {% endif %}
 
